# tha-csv-runner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tha_csv_runner/: __init__.py  cli.py  errors.py  runner.py
tests/: conftest.py  test_cli.py  test_runner.py
tests/fixtures/: processors.py  simple.tsv  with_errors.csv
