[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tha-csv-runner"
version = "0.2.5"
description = "Run a function over every row of a CSV — with progress, header validation, and structured per-row errors."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate Wright" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
dependencies = [
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/tha-guy-nate/tha-csv-runner"
Issues = "https://github.com/tha-guy-nate/tha-csv-runner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_csv_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
