[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tha-csv-runner"
version = "0.3.1"
description = "A Tabular Helper API library that reads and writes CSVs with progress tracking, header validation, and structured per-row errors."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate Wright" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "tqdm>=4.68.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/tha-guy-nate/tha-csv-runner"
Issues = "https://github.com/tha-guy-nate/tha-csv-runner/issues"
Changelog = "https://github.com/tha-guy-nate/tha-csv-runner/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_csv_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
